--- a/korean/hanterm/Makefile
+++ b/korean/hanterm/Makefile
@@ -1,20 +1,20 @@
-# New ports collection makefile for:	hanterm304beta3
-# Version required:     3.04beta3
-# Date created:		22 Mar 1997
-# Whom:			Choi Jun Ho <junker@jazz.snu.ac.kr>
+# New ports collection makefile for:	hanterm304beta6p1
+# Version required:     3.04beta6p1
+# Date created:		12 Mar 1997
+# Whom:			CHOI Junho <junker@jazz.snu.ac.kr>
 #
-# $Id: Makefile,v 1.1.1.1 1997/04/18 08:45:50 asami Exp $
+# $Id: Makefile,v 1.2 1997/09/22 16:21:47 max Exp $
 #
 
-DISTNAME=       hanterm304beta3
-PKGNAME=	ko-hanterm-304b3
+DISTNAME=	hanterm304beta6p1
+PKGNAME=	ko-hanterm-3.04b6.1
 CATEGORIES=	korean x11
-MASTER_SITES=	ftp://ftp.kaist.ac.kr/pub/hangul/terminal/hanterm/ \
-		ftp://sunsite.kren.nm.kr/pub/packages/hangul/terminal/hanterm/
-
-RUN_DEPENDS=	${PREFIX}/lib/X11/fonts/korean/johab:$(PORTSDIR)/korean/johabfonts	
+MASTER_SITES=	ftp://ftp.kaist.ac.kr/pub/hangul/terminal/hanterm/hanterm304beta/ \
+		ftp://ftp.kreonet.re.kr/pub/hangul/cair-archive/terminal/hanterm/hanterm304beta/
 
 MAINTAINER=	junker@jazz.snu.ac.kr
+
+RUN_DEPENDS=	${PREFIX}/lib/X11/fonts/korean/johab:${PORTSDIR}/korean/johabfonts
 
 USE_IMAKE=	yes
 NO_INSTALL_MANPAGES= yes
