--- a/www/netscape3/Makefile
+++ b/www/netscape3/Makefile
@@ -3,7 +3,7 @@
 # Date created:		21 August 1995
 # Whom:			asami
 #
-# $Id: Makefile,v 1.19 1998/01/26 09:53:03 vanilla Exp $
+# $Id: Makefile,v 1.20 1998/03/15 15:10:38 markm Exp $
 #
 
 DISTNAME=       netscape-3.04
@@ -21,20 +21,21 @@ DIST_SUBDIR=    gold
 PKGNAME=	${DISTNAME}-gold
 .endif
 
-.if defined(USE_128BIT) && ${USA_RESIDENT} == NO
+.if defined(USE_128BIT) && defined(USA_RESIDENT) && ${USA_RESIDENT} == NO
 MASTER_SITES+=	ftp://ftp.fortify.net/pub/Fortify/ \
 		ftp://ftp.za.freebsd.org/pub/Fortify/
 DISTFILES+=	Fortify-1.2.1-unix.tar.gz
 RESTRICTED=     "Contains strong cryptography"
 .endif
 
-.if !defined(USE_128BIT) && ${USA_RESIDENT} == NO
+.if !defined(USE_128BIT)
 pre-extract:
 		@${ECHO} "You can make Netscape use 128-bit encryption by defining USE_128BIT"
+		@${ECHO} "and defining USA_RESIDENT to NO"
 .endif
 
 post-install:
-.if defined(USE_128BIT) && ${USA_RESIDENT} == NO
+.if defined(USE_128BIT) && defined(USA_RESIDENT) && ${USA_RESIDENT} == NO
 	cd ${WRKSRC}/Fortify-1.2.1-unix && \
 		(${ECHO} yes ; ${ECHO} no) | ./Fortify.sh ${PREFIX}/lib/netscape/netscape.bin
 .endif
