--- a/palm/kpilot/Makefile
+++ b/palm/kpilot/Makefile
@@ -3,7 +3,7 @@
 # Date created:        09 April 1998
 # Whom:                Stefan Eßer <se@freebsd.org>
 #
-# $Id:$
+# $Id: Makefile,v 1.1.1.1 1998/03/07 15:31:52 se Exp $
 #
 
 DISTNAME=	kpilot-2.0
@@ -23,9 +23,10 @@ LIB_DEPENDS=	qt\\.1\\.3[1-9]:${PORTSDIR}/x11/qt \
 		kfm\\.0\\.9[0-9]:${PORTSDIR}/x11/kdelibs \
 		mediatool\\.0\\.[6-9]:${PORTSDIR}/x11/kdelibs
 
-HAS_CONFIGURE=	yes
-CONFIGURE_ARGS=	"--prefix=$(PREFIX)" \
-		"--with-extra-includes=$(PREFIX)/include/giflib"
+BROKEN=		install
+
+GNU_CONFIGURE=	yes
+CONFIGURE_ARGS=	"--with-extra-includes=$(PREFIX)/include/giflib"
 USE_GMAKE=	yes
 
 CONFIGURE_ENV=	CXXFLAGS="$(CFLAGS)" \
