--- a/x11-toolkits/lesstif/Makefile
+++ b/x11-toolkits/lesstif/Makefile
@@ -1,15 +1,15 @@
 # New ports collection makefile for:	lesstif
-# Version required:	0.82
+# Version required:	0.83
 # Date created:		December 10, 1996
 # Whom:			1wardd@airmail.net
 #
-# $Id: Makefile,v 1.14 1997/11/20 08:15:12 tg Exp $
+# $Id: Makefile,v 1.15 1997/11/22 01:24:30 asami Exp $
 #
 
-DISTNAME=	lesstif-0.82
+DISTNAME=	lesstif-0.83
 CATEGORIES=	x11
-MASTER_SITES=	ftp://ftp.lesstif.org/pub/hungry/lesstif/  \
-		ftp://ftp.hungry.com/pub/hungry/lesstif/
+MASTER_SITES=	ftp://ftp.lesstif.org/pub/hungry/lesstif/srcdist/  \
+		ftp://ftp.hungry.com/pub/hungry/lesstif/srcdist/
 
 MAINTAINER=	ports@FreeBSD.org
 
@@ -17,9 +17,9 @@ MAINTAINER=	ports@FreeBSD.org
 
 MANUAL_PACKAGE_BUILD=	do not want to install during interactive build
 GNU_CONFIGURE=  yes
+# comment this and remove the strip statement in post-install for debugging
+CONFIGURE_ARGS=	--disable-debug
 USE_X11=	yes
-# change this and remove the strip statement in post-install for debugging
-CONFIGURE_ENV=	CCFLAGS="-O -pipe"
 
 .if defined(HAVE_MOTIF)
 IS_INTERACTIVE=	yes
@@ -50,7 +50,7 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/clients/Motif-1.2/mwm/alt.map ${PREFIX}/lib/X11/mwm
 	${INSTALL_DATA} ${WRKSRC}/clients/Motif-1.2/mwm/Mwm \
 		${PREFIX}/lib/X11/app-defaults/Mwm
-	/usr/bin/strip ${PREFIX}/lib/libXm.so.0.1 ${PREFIX}/lib/libMrm.so.0.1
+	/usr/bin/strip ${PREFIX}/lib/libXm.so.1.2 ${PREFIX}/lib/libMrm.so.1.2
 	${LDCONFIG} -m ${PREFIX}/lib
 
 .include <bsd.port.mk>
@@ -62,3 +62,4 @@ post-install:
 #	0.78			0.0
 #	0.79			0.1
 #	0.80			0.1
+#       0.83			1.2
