--- a/x11-toolkits/gtk13/Makefile
+++ b/x11-toolkits/gtk13/Makefile
@@ -3,11 +3,12 @@
 # Date Created:			28 Sep 1997
 # Whom:				Vanilla I. Shu <vanilla@MinJe.com.TW>
 #
-# $Id: Makefile,v 1.10 1998/03/09 02:52:55 steve Exp $
+# $Id: Makefile,v 1.11 1998/03/14 19:47:58 vanilla Exp $
 #
 
-DISTNAME=      gtk+-0.99.5
-PKGNAME=       gtk-0.99.5
+DISTNAME=      gtk+-0.99.7
+PKGNAME=       gtk-0.99.7
+
 CATEGORIES=    x11
 MASTER_SITES=  ftp://ftp.gimp.org/pub/gtk/v0.99/
 
@@ -16,6 +17,8 @@ MAINTAINER=    vanilla@FreeBSD.ORG
 GNU_CONFIGURE= yes
 USE_GMAKE=     yes
 USE_X11=       yes
+
+CONFIGURE_ENV= INSTALL='/usr/bin/install -c'
 
 pre-install:
 	@if [ ! -f ${PREFIX}/info/dir ]; then \
